# client_server_demo

./: .gitignore  CLAUDE.md  PRD.md  README.md  justfile  main.py  package-lock.json  pyproject.toml  test-comprehensive.js  test-console.js
api/: openapi.yaml  spectral.yaml
console/: .env.local.example  package.json  tsconfig.tsbuildinfo
ops/: compose.yaml
scripts/: setup.py
server/: .env  .env.example  pyproject.toml
server/app/: main.py
server/app/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  observability.py
server/app/models/: __init__.py  booking.py  departure.py  idempotency.py  inventory.py  tour.py  waitlist.py
server/app/routers/: __init__.py  booking.py  departure.py  health.py  inventory.py  metrics.py  tour.py  waitlist.py
server/app/schemas/: __init__.py  booking.py  common.py  departure.py  health.py  inventory.py  tour.py  waitlist.py
server/app/services/: __init__.py  booking_service.py  departure_service.py  idempotency_service.py  inventory_service.py  tour_service.py  waitlist_service.py
server/app/workers/: __init__.py  base.py  hold_expiry_worker.py  manager.py  waitlist_worker.py
server/db/: alembic.ini
server/db/alembic/: env.py
server/db/alembic/versions/: 0001_20250802_1230_0001_initial_database_schema.py
server/tests/: __init__.py  conftest.py  test_api_health.py  test_simple.py
server/tests/concurrency/: __init__.py  test_concurrent_bookings.py
server/tests/property/: test_booking_invariants.py
server/tests/unit/: test_api_endpoints.py  test_health.py  test_tour_service.py
(+47 files in other folders)
